--- a/story.html
+++ b/story.html
@@ -25,12 +25,12 @@
       </h1>
       <ul>
         <li>
-          <a href="#">TGI Story</a>
+          <a href="story.html">TGI Story</a>
         </li>
-        <li><a href="#">FOOD</a></li>
-        <li><a href="#">BAR</a></li>
-        <li><a href="#">EVENT</a></li>
-        <li><a href="#">STORE</a></li>
+        <li><a href="food.html">FOOD</a></li>
+        <li><a href="bar.html">BAR</a></li>
+        <li><a href="event.html">EVENT</a></li>
+        <li><a href="store.html">STORE</a></li>
       </ul>
     </header>
     <section id="visual">
