--- a/bar.html
+++ b/bar.html
@@ -40,7 +40,7 @@
     <section id="con1">
       <h2><span>NEW</span> MENU</h2>
       <div class="wrap">
-        <ul>
+        <ul class="list">
           <li class="on">
             <a href="#">
               <h3>Ultimate Orange Dream</h3>
@@ -60,36 +60,38 @@
             </a>
           </li>
         </ul>
-        <div class="img bigImg">
-          <a href="#">
-            <img src="img/bar_con1_1.png" />
-            <h4>ULTIMATE ORANGE DREAM</h4>
-            <p>
-              와인과 오렌지, 라임이 부드럽게 조화를 이룬<br />스페인의 대중적인
-              칵테일
-            </p>
-          </a>
-        </div>
-        <div class="img smallImg">
-          <a href="#">
-            <img src="img/bar_con1_2.png" />
-            <h4>LONG ISLAND ICED TEA</h4>
-            <p>
-              롱 아일랜드 해변에서 만난<br />세계 4대 프리미엄급 증류주의<br />강렬하고
-              상큼한 칵테일
-            </p></a
-          >
-        </div>
-        <div class="img smallImg">
-          <a href="#">
-            <img src="img/bar_con1_1.png" />
-            <h4>CLASSIC MARGARITA</h4>
-            <p>
-              프리미엄 데킬라와 상큼한<br />레몬, 라임이 조화된<br />싱그러움을
-              느낄 수 있는 칵테일
-            </p>
-          </a>
-        </div>
+        <ul class="img">
+          <li>
+            <a href="#">
+              <img src="img/bar_con1_1.png" />
+              <h4>ULTIMATE ORANGE DREAM</h4>
+              <p>
+                와인과 오렌지, 라임이 부드럽게 조화를 이룬<br />스페인의
+                대중적인 칵테일
+              </p></a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/bar_con1_2.png" />
+              <h4>LONG ISLAND ICED TEA</h4>
+              <p>
+                롱 아일랜드 해변에서 만난<br />세계 4대 프리미엄급 증류주의<br />강렬하고
+                상큼한 칵테일
+              </p></a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/bar_con1_1.png" />
+              <h4>CLASSIC MARGARITA</h4>
+              <p>
+                프리미엄 데킬라와 상큼한<br />레몬, 라임이 조화된<br />싱그러움을
+                느낄 수 있는 칵테일
+              </p>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
     <section id="con2">
