--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <section id="con2">
       <ul>
         <li>
-          <img src="img/index_con2_center.png" />
+          <img src="img/index_con2_1.png" />
         </li>
         <li>
           <img src="img/index_con2_center.png" />
         </li>
         <li>
-          <img src="img/index_con2_center.png" />
+          <img src="img/index_con2_3.png" />
         </li>
       </ul>
       <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
