--- a/store.html
+++ b/store.html
@@ -6,6 +6,7 @@
     <title>Store</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/store.pc.css" />
+    <link rel="stylesheet" href="css/store.tablet.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Hachi+Maru+Pop&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
@@ -78,8 +79,7 @@
           <h3>롯데백화점 건대스타시티점</h3>
           <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
           <div class="loca">
-            <span>주소 • </span> 서울특별시 광진구 능동로 92, 롯데백화점
-            건대스타시티점 9층
+            <span>주소 • </span> 서울특별시 광진구 능동로 92
           </div>
           <ul class="btn">
             <li><a href="#">예약하기</a></li>
