--- a/food.html
+++ b/food.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/food.pc.css" />
     <link rel="stylesheet" href="css/food.tablet.css" />
+    <link rel="stylesheet" href="css/food.mo.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Hachi+Maru+Pop&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
@@ -25,7 +26,10 @@
       <h1>
         <a href="index.html"><img src="img/logo.JPG" /></a>
       </h1>
-      <ul>
+      <div class="bar">
+        <a href="#"> <i class="fa-solid fa-bars"></i></a>
+      </div>
+      <ul class="gnb">
         <li>
           <a href="story.html">TGI Story</a>
         </li>
@@ -45,7 +49,7 @@
           <a href="#">PASTA<br />& RICE</a>
         </li>
         <li><a href="#">BURGER</a></li>
-        <li><a href="#">BRILL</a></li>
+        <li><a href="#">GRILL</a></li>
       </ul>
     </section>
     <section id="con2">
@@ -53,6 +57,7 @@
       <h2>SALAD</h2>
       <p>IN HERE, IT'S ALWAYS FRIDAY</p>
       <div class="menu">
+        <img src="img/food_salad1.png" />
         <h3>치킨 시저 샐러드</h3>
         <h4>Chicken Caesar Salad</h4>
         <p>
@@ -62,15 +67,17 @@
         <div>18,800원</div>
       </div>
       <div class="menu">
+        <img src="img/food_salad2.png" />
         <h3>하베스트 망고 치킨 샐러드</h3>
         <h4>Harvest Mango Chicken Salad</h4>
         <p>
-          신선한 시금치와 ㅡ릴에 구운 닭가슴살, 캔디드 피칸, 망고 살사를<br />허니
+          신선한 시금치와 그릴에 구운 닭가슴살, 캔디드 피칸, 망고 살사를<br />허니
           머스타드 드레싱과 함께 즐기는 샐러드
         </p>
         <div>20,900원</div>
       </div>
       <div class="menu">
+        <img src="img/food_salad3.png" />
         <h3>콥 샐러드</h3>
         <h4>Cobb Salad</h4>
         <p>
@@ -81,6 +88,7 @@
         <div>21,900원</div>
       </div>
       <div class="menu">
+        <img src="img/food_salad4.png" />
         <h3>케이준 프라이드 치킨 샐러드</h3>
         <h4>Cajun Fried Chicken Salad</h4>
         <p>
