--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.pc.css" />
     <link rel="stylesheet" href="css/index.tablet.css" />
+    <link rel="stylesheet" href="css/index.mo.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Hachi+Maru+Pop&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
@@ -33,7 +34,10 @@
       <h1>
         <a href="index.html"><img src="img/logo.JPG" /></a>
       </h1>
-      <ul>
+      <div class="bar">
+        <a href="#"> <i class="fa-solid fa-bars"></i></a>
+      </div>
+      <ul class="gnb">
         <li>
           <a href="story.html">TGI Story</a>
         </li>
@@ -59,6 +63,27 @@
           <p>steak, burger, pasta,<br />pilaf to make<br />perfect FRIDAYS</p>
           <div><a href="#">MENU</a></div>
         </li>
+        <li><a href="#"></a></li>
+      </ul>
+      <ul class="moCon1T_1">
+        <li><a href="#"></a></li>
+      </ul>
+      <ul class="moCon1T_2">
+        <li><a href="#"></a></li>
+        <li>
+          <h3>FIND YOUR<br />FRIDAYS</h3>
+          <div><a href="#">SEE OUR LOCATIONS</a></div>
+        </li>
+      </ul>
+      <ul class="moCon1T_3">
+        <li>
+          <h4>WE MAKE</h4>
+          <p>steak, burger, pasta,<br />pilaf to make<br />perfect FRIDAYS</p>
+          <div><a href="#">MENU</a></div>
+        </li>
+        <li><a href="#"></a></li>
+      </ul>
+      <ul class="moCon1T_4">
         <li><a href="#"></a></li>
       </ul>
     </section>
