--- a/story.html
+++ b/story.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/story.pc.css" />
     <link rel="stylesheet" href="css/story.tablet.css" />
+    <link rel="stylesheet" href="css/story.mo.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Hachi+Maru+Pop&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
@@ -24,7 +25,10 @@
       <h1>
         <a href="index.html"><img src="img/logo.JPG" /></a>
       </h1>
-      <ul>
+      <div class="bar">
+        <a href="#"> <i class="fa-solid fa-bars"></i></a>
+      </div>
+      <ul class="gnb">
         <li>
           <a href="story.html">TGI Story</a>
         </li>
@@ -81,7 +85,7 @@
           </div>
         </li>
         <li>
-          <img src="img/story_con2_2.jpg" />
+          <img src="img/story_con2_2.JPG" />
           <div class="txt">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
