--- a/food.html
+++ b/food.html
@@ -20,6 +20,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/food.js"></script>
   </head>
   <body>
     <header>
@@ -27,7 +29,7 @@
         <a href="index.html"><img src="img/logo.JPG" /></a>
       </h1>
       <div class="bar">
-        <a href="#"> <i class="fa-solid fa-bars"></i></a>
+        <a href="javascript:;"> <i class="fa-solid fa-bars"></i></a>
       </div>
       <ul class="gnb">
         <li>
@@ -44,12 +46,12 @@
     </section>
     <section id="con1">
       <ul>
-        <li class="on"><a href="#">SALAD</a></li>
+        <li class="on"><a href="javascript:;">SALAD</a></li>
         <li>
-          <a href="#">PASTA<br />& RICE</a>
+          <a href="javascript:;">PASTA<br />& RICE</a>
         </li>
-        <li><a href="#">BURGER</a></li>
-        <li><a href="#">GRILL</a></li>
+        <li><a href="javascript:;">BURGER</a></li>
+        <li><a href="javascript:;">GRILL</a></li>
       </ul>
     </section>
     <section id="con2">
@@ -110,16 +112,22 @@
       <div class="recipe">
         <ul>
           <li>SEE OUR FULL<br />MENU?</li>
-          <li><img src="img/food_con3_1.png" /></li>
+          <li class="icon1"><img src="img/food_con3_1.png" /></li>
+          <li class="icon2"><img src="img/food_con3_1.rev.png" /></li>
         </ul>
-        <div class="download"><a href="#">DOWNLOAD FULL MENU →</a></div>
+        <div class="download">
+          <a href="javascript:;">DOWNLOAD FULL MENU →</a>
+        </div>
       </div>
       <div class="allergy">
         <ul>
           <li>DO YOU HAVE<br />ALLERGIES?</li>
-          <li><img src="img/food_con3_2.png" /></li>
+          <li class="icon1"><img src="img/food_con3_2.png" /></li>
+          <li class="icon2"><img src="img/food_con3_2.rev.png" /></li>
         </ul>
-        <div class="download"><a href="#">DOWNLOAD ALLERGENS LIST →</a></div>
+        <div class="download">
+          <a href="javascript:;">DOWNLOAD ALLERGENS LIST →</a>
+        </div>
       </div>
     </section>
     <footer>
@@ -128,20 +136,20 @@
       <div class="footer">
         <ul class="sns">
           <li>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-instagram"></i></a>
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="#">CAREERS</a></li>
-          <li><a href="#">GIFT CARDS</a></li>
-          <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-          <li><a href="#">EMAIL SIGNUP</a></li>
+          <li><a href="javascript:;">CAREERS</a></li>
+          <li><a href="javascript:;">GIFT CARDS</a></li>
+          <li><a href="javascript:;">ACCESSIBILITY STATEMENT</a></li>
+          <li><a href="javascript:;">PRESS</a></li>
+          <li><a href="javascript:;">CONTACT</a></li>
+          <li><a href="javascript:;">PRIVACY POLICY</a></li>
+          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
         </ul>
       </div>
     </footer>
