--- a/index.html
+++ b/index.html
@@ -19,17 +19,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/index.js"></script>
   </head>
   <body>
-    <div id="visual">
-      <div class="visualTxt">
-        <img src="img/stripe.jpg" />
-        <h2>In HERE,<br />It's always FRIDAYS!</h2>
-        <a href="#"><div>ORDER NOW</div></a>
-      </div>
-      <img src="img/index_visual_burger.png" />
-    </div>
     <header>
       <h1>
         <a href="index.html"><img src="img/logo.JPG" /></a>
@@ -47,13 +40,21 @@
         <li><a href="store.html">STORE</a></li>
       </ul>
     </header>
+    <div id="visual">
+      <div class="visualTxt">
+        <img src="img/stripe.jpg" />
+        <h2>In HERE,<br />It's always FRIDAYS!</h2>
+        <a href="#"><div>ORDER NOW</div></a>
+      </div>
+      <img src="img/index_visual_burger.png" />
+    </div>
     <section id="con1">
       <ul class="con1Top">
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li>
           <h3>FIND YOUR<br />FRIDAYS</h3>
-          <div><a href="#">SEE OUR LOCATIONS</a></div>
+          <div><a href="store.html">SEE OUR LOCATIONS</a></div>
         </li>
       </ul>
       <ul class="con1Bottom">
@@ -61,7 +62,7 @@
         <li>
           <h4>WE MAKE</h4>
           <p>steak, burger, pasta,<br />pilaf to make<br />perfect FRIDAYS</p>
-          <div><a href="#">MENU</a></div>
+          <div><a href="food.html">MENU</a></div>
         </li>
         <li><a href="#"></a></li>
       </ul>
@@ -108,7 +109,7 @@
           치즈 포테이토 스킨을 함께 즐길 수 있는<br />티지아이 프라이데이스의
           시그니처 에피타이저
         </p>
-        <div><a href="#">VIEW MORE +</a></div>
+        <div><a href="food.html">VIEW MORE +</a></div>
       </div>
     </section>
     <section id="con3">
@@ -116,13 +117,13 @@
       <h3>IT'S <span>FRIDAYS</span></h3>
       <ul>
         <li>
-          <a href="#"><img src="img/index_con3_1.jpg" /></a>
+          <a href="event.html"><img src="img/index_con3_1.jpg" /></a>
         </li>
         <li>
-          <a href="#"><img src="img/index_con3_2.png" /></a>
+          <a href="event.html"><img src="img/index_con3_2.png" /></a>
         </li>
         <li>
-          <a href="#"><img src="img/index_con3_3.jpg" /></a>
+          <a href="event.html"><img src="img/index_con3_3.jpg" /></a>
         </li>
       </ul>
     </section>
@@ -132,7 +133,7 @@
         <h3><span>FRIDAYS</span> ARE<br />EVERYWHERE!</h3>
         <p>금요일의 활기참을 느끼고 있다면 주위를 둘러보세요!</p>
         <p>전 세계 어디서나 TGI FRIDAYS가 당신을 기다리고 있습니다!</p>
-        <a href="#"><div class="btnRed">매장 찾기 ———→</div></a>
+        <a href="store.html"><div class="btnRed">매장 찾기 ———→</div></a>
       </div>
     </section>
     <footer>
