--- a/story.html
+++ b/story.html
@@ -19,6 +19,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/story.js"></script>
   </head>
   <body>
     <header>
@@ -47,17 +49,17 @@
       <ul>
         <li>
           <img src="img/story_con1_1.png" />
-          <div>47<span>th</span></div>
-          <p>SINCE 1965</p>
+          <div>1</div>
+          <p>years SINCE 1965</p>
         </li>
         <li>
           <img src="img/story_con1_2.png" />
-          <div>65</div>
+          <div>1</div>
           <p>개 국가</p>
         </li>
         <li>
           <img src="img/story_con1_3.png" />
-          <div>1000</div>
+          <div>1</div>
           <p>개 이상의 매장</p>
         </li>
       </ul>
