--- a/store.html
+++ b/store.html
@@ -20,6 +20,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="js/jquery-3.7.1.min.js"></script>
   </head>
   <body>
     <header>
