--- a/bar.html
+++ b/bar.html
@@ -21,6 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bar.js"></script>
   </head>
   <body>
     <header>
@@ -48,54 +49,52 @@
       <div class="wrap">
         <ul class="list">
           <li class="on">
-            <a href="#">
-              <h3>Ultimate Orange Dream</h3>
+            <a href="javascript:;">
+              <h3>
+                Ultimate Orange Dream <i class="fa-solid fa-arrow-right"></i>
+              </h3>
               <p>얼티밋 오렌지 드림</p>
             </a>
           </li>
           <li>
-            <a href="#">
-              <h3>Long Island Iced Tea</h3>
+            <a href="javascript:;">
+              <h3>
+                Long Island Iced Tea <i class="fa-solid fa-arrow-right"></i>
+              </h3>
               <p>롱 아일랜드 아이스 티</p>
             </a>
           </li>
           <li>
-            <a href="#">
-              <h3>Classic Margarita</h3>
+            <a href="javascript:;">
+              <h3>Classic Margarita <i class="fa-solid fa-arrow-right"></i></h3>
               <p>클래식 마가리타</p>
             </a>
           </li>
         </ul>
         <ul class="img">
           <li>
-            <a href="#">
-              <img src="img/bar_con1_1.png" />
-              <h4>ULTIMATE ORANGE DREAM</h4>
-              <p>
-                와인과 오렌지, 라임이 부드럽게 조화를 이룬<br />스페인의
-                대중적인 칵테일
-              </p>
-            </a>
+            <img src="img/bar_con1_1.png" />
+            <h4>ULTIMATE ORANGE DREAM</h4>
+            <p>
+              와인과 오렌지, 라임이 부드럽게 조화를 이룬<br />스페인의 대중적인
+              칵테일
+            </p>
           </li>
           <li>
-            <a href="#">
-              <img src="img/bar_con1_2.png" />
-              <h4>LONG ISLAND ICED TEA</h4>
-              <p>
-                롱 아일랜드 해변에서 만난<br />세계 4대 프리미엄급 증류주의<br />강렬하고
-                상큼한 칵테일
-              </p></a
-            >
+            <img src="img/bar_con1_2.png" />
+            <h4>LONG ISLAND ICED TEA</h4>
+            <p>
+              롱 아일랜드 해변에서 만난<br />세계 4대 프리미엄급 증류주의<br />강렬하고
+              상큼한 칵테일
+            </p>
           </li>
           <li>
-            <a href="#">
-              <img src="img/bar_con1_1.png" />
-              <h4>CLASSIC MARGARITA</h4>
-              <p>
-                프리미엄 데킬라와 상큼한<br />레몬, 라임이 조화된<br />싱그러움을
-                느낄 수 있는 칵테일
-              </p>
-            </a>
+            <img src="img/bar_con1_1.png" />
+            <h4>CLASSIC MARGARITA</h4>
+            <p>
+              프리미엄 데킬라와 상큼한<br />레몬, 라임이 조화된<br />싱그러움을
+              느낄 수 있는 칵테일
+            </p>
           </li>
         </ul>
       </div>
@@ -110,31 +109,31 @@
       </div>
       <ul class="alcoholTop">
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>핑크 펑크 코스모</p>
             <h3>Pink Punk Cosmo</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>모히또</p>
             <h3>Mojito</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>얼티밋 피나 콜라다</p>
             <h3>Ultimate Pina Colada</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>퍼플 레인</p>
             <h3>Purple Rain</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>얼티밋 마가리타</p>
             <h3>Ultimate Margarita</h3>
           </a>
@@ -142,31 +141,31 @@
       </ul>
       <ul class="alcoholBottom">
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>스트로베리 모히또</p>
             <h3>Strawberry Mojito</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>얼티밋 롱 아일랜드 아이스 티</p>
             <h3>Ultimate Long Island Iced Tea</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>에스프레소 마티니</p>
             <h3>Espresso Martini</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>빅 애플 모히또</p>
             <h3>Big Apple Mojito</h3>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             <p>핑크 칠리 마가리타</p>
             <h3>Pink Chili Margarita</h3>
           </a>
@@ -279,20 +278,20 @@
       <div class="footer">
         <ul class="sns">
           <li>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-instagram"></i></a>
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="#">CAREERS</a></li>
-          <li><a href="#">GIFT CARDS</a></li>
-          <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-          <li><a href="#">EMAIL SIGNUP</a></li>
+          <li><a href="javascript:;">CAREERS</a></li>
+          <li><a href="javascript:;">GIFT CARDS</a></li>
+          <li><a href="javascript:;">ACCESSIBILITY STATEMENT</a></li>
+          <li><a href="javascript:;">PRESS</a></li>
+          <li><a href="javascript:;">CONTACT</a></li>
+          <li><a href="javascript:;">PRIVACY POLICY</a></li>
+          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
         </ul>
       </div>
     </footer>
