--- a/event.html
+++ b/event.html
@@ -28,7 +28,7 @@
         <a href="index.html"><img src="img/logo.JPG" /></a>
       </h1>
       <div class="bar">
-        <a href="#"> <i class="fa-solid fa-bars"></i></a>
+        <a href="javascript:;"> <i class="fa-solid fa-bars"></i></a>
       </div>
       <ul class="gnb">
         <li>
@@ -51,7 +51,7 @@
             TGI FRIDAYS의<br />시그니처 스테이크&립 세트가<br />최대 33%
             할인합니다
           </p>
-          <div><a href="#">MORE +</a></div>
+          <div><a href="javascript:;">MORE +</a></div>
         </div>
       </div>
       <div class="event2">
@@ -60,7 +60,7 @@
           <p>
             TGI FRIDAYS 스타일의<br />조니하이볼이<br />새롭게 출시되었습니다
           </p>
-          <div><a href="#">MORE +</a></div>
+          <div><a href="javascript:;">MORE +</a></div>
         </div>
       </div>
       <div class="event3">
@@ -70,7 +70,7 @@
             런치 메뉴 주문 시<br />[식전브레드+탄산 음료]가<br />무료로
             제공됩니다
           </p>
-          <div><a href="#">MORE +</a></div>
+          <div><a href="javascript:;">MORE +</a></div>
         </div>
       </div>
       <div class="event4">
@@ -80,7 +80,7 @@
             매달 두 번째, 마지막 금요일<br />파격적인 혜택으로<br />불금을
             즐기세요
           </p>
-          <div><a href="#">MORE +</a></div>
+          <div><a href="javascript:;">MORE +</a></div>
         </div>
       </div>
     </section>
@@ -89,14 +89,26 @@
       <h2>NOTICE</h2>
       <ul>
         <li>
-          <a href="#">
+          <a href="javascript:;">
             ■ TGIF 롯데백화점 영등포점, 롯데백화점 잠실점 영업 종료 안내 (12월
             31일부 종료)
           </a>
         </li>
-        <li><a href="#">■ 영상정보 처리기기 운영 및 관리 방침 개정 안내</a></li>
-        <li><a href="#">■ 영상정보 처리기기 운영 및 관리 방침 개정 안내</a></li>
-        <li><a href="#">■ 영상정보 처리기기 운영 및 관리 방침 개정 안내</a></li>
+        <li>
+          <a href="javascript:;"
+            >■ 영상정보 처리기기 운영 및 관리 방침 개정 안내</a
+          >
+        </li>
+        <li>
+          <a href="javascript:;"
+            >■ 영상정보 처리기기 운영 및 관리 방침 개정 안내</a
+          >
+        </li>
+        <li>
+          <a href="javascript:;"
+            >■ 영상정보 처리기기 운영 및 관리 방침 개정 안내</a
+          >
+        </li>
       </ul>
       <img class="stripe2" src="img/stripe.jpg" />
     </section>
@@ -106,20 +118,20 @@
       <div class="footer">
         <ul class="sns">
           <li>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-instagram"></i></a>
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="#">CAREERS</a></li>
-          <li><a href="#">GIFT CARDS</a></li>
-          <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-          <li><a href="#">EMAIL SIGNUP</a></li>
+          <li><a href="javascript:;">CAREERS</a></li>
+          <li><a href="javascript:;">GIFT CARDS</a></li>
+          <li><a href="javascript:;">ACCESSIBILITY STATEMENT</a></li>
+          <li><a href="javascript:;">PRESS</a></li>
+          <li><a href="javascript:;">CONTACT</a></li>
+          <li><a href="javascript:;">PRIVACY POLICY</a></li>
+          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
         </ul>
       </div>
     </footer>
