--- a/store.html
+++ b/store.html
@@ -21,6 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/store.js"></script>
   </head>
   <body>
     <header>
@@ -46,7 +47,7 @@
     <section id="popup">
       <img class="stripe1" src="img/stripe.jpg" />
       <ul>
-        <li><img src="img/store_1.jpg" /></li>
+        <li><button>X</button><br /><img src="img/store_1.jpg" /></li>
         <li>
           <ul class="info">
             <li>
@@ -77,7 +78,8 @@
       </ul>
       <img class="stripe2" src="img/stripe.jpg" />
     </section>
-    <section id="con1">
+    <div class="modal"></div>
+    <section id="con2">
       <ul class="store">
         <li><img src="img/store_1.jpg" /></li>
         <li>
@@ -87,9 +89,9 @@
             <span>주소 • </span> 서울특별시 광진구 능동로 92
           </div>
           <ul class="btn">
-            <li><a href="#">예약하기</a></li>
-            <li><a href="#">배달</a></li>
-            <li><a href="#">상세보기</a></li>
+            <li><a href="javascript:;">예약하기</a></li>
+            <li><a href="javascript:;">배달</a></li>
+            <li><a href="javascript:;">상세보기</a></li>
           </ul>
         </li>
       </ul>
@@ -102,9 +104,9 @@
             <span>주소 • </span> 서울특별시 강서구 하늘길 38
           </div>
           <ul class="btn">
-            <li><a href="#">예약하기</a></li>
-            <li><a href="#">배달</a></li>
-            <li><a href="#">상세보기</a></li>
+            <li><a href="javascript:;">예약하기</a></li>
+            <li><a href="javascript:;">배달</a></li>
+            <li><a href="javascript:;">상세보기</a></li>
           </ul>
         </li>
       </ul>
@@ -117,9 +119,9 @@
             <span>주소 • </span> 대전광역시 서구 계룡로 598
           </div>
           <ul class="btn">
-            <li><a href="#">예약하기</a></li>
-            <li><a href="#">배달</a></li>
-            <li><a href="#">상세보기</a></li>
+            <li><a href="javascript:;">예약하기</a></li>
+            <li><a href="javascript:;">배달</a></li>
+            <li><a href="javascript:;">상세보기</a></li>
           </ul>
         </li>
       </ul>
@@ -132,18 +134,18 @@
             <span>주소 • </span> 서울 송파구 올림픽로 240 롯데월드 남문
           </div>
           <ul class="btn">
-            <li><a href="#">예약하기</a></li>
-            <li><a href="#">배달</a></li>
-            <li><a href="#">상세보기</a></li>
+            <li><a href="javascript:;">예약하기</a></li>
+            <li><a href="javascript:;">배달</a></li>
+            <li><a href="javascript:;">상세보기</a></li>
           </ul>
         </li>
       </ul>
     </section>
     <ul class="page">
       <li class="on"><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">4</a></li>
+      <li><a href="javascript:;">2</a></li>
+      <li><a href="javascript:;">3</a></li>
+      <li><a href="javascript:;">4</a></li>
     </ul>
     <footer>
       <h3>FOLLOW US</h3>
@@ -154,17 +156,17 @@
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-instagram"></i></a>
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="#">CAREERS</a></li>
-          <li><a href="#">GIFT CARDS</a></li>
+          <li><a href="javascript:;">CAREERS</a></li>
+          <li><a href="javascript:;">GIFT CARDS</a></li>
           <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-          <li><a href="#">EMAIL SIGNUP</a></li>
+          <li><a href="javascript:;">PRESS</a></li>
+          <li><a href="javascript:;">CONTACT</a></li>
+          <li><a href="javascript:;">PRIVACY POLICY</a></li>
+          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
         </ul>
       </div>
     </footer>
