--- a/story.html
+++ b/story.html
@@ -141,20 +141,20 @@
       <div class="footer">
         <ul class="sns">
           <li>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-instagram"></i></a>
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="#">CAREERS</a></li>
-          <li><a href="#">GIFT CARDS</a></li>
-          <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-          <li><a href="#">EMAIL SIGNUP</a></li>
+          <li><a href="javascript:;">CAREERS</a></li>
+          <li><a href="javascript:;">GIFT CARDS</a></li>
+          <li><a href="javascript:;">ACCESSIBILITY STATEMENT</a></li>
+          <li><a href="javascript:;">PRESS</a></li>
+          <li><a href="javascript:;">CONTACT</a></li>
+          <li><a href="javascript:;">PRIVACY POLICY</a></li>
+          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
         </ul>
       </div>
     </footer>
