--- a/index.html
+++ b/index.html
@@ -44,48 +44,48 @@
       <div class="visualTxt">
         <img src="img/stripe.jpg" />
         <h2>In HERE,<br />It's always FRIDAYS!</h2>
-        <a href="#"><div>ORDER NOW</div></a>
+        <a href="javascript:;"><div>ORDER NOW</div></a>
       </div>
       <img src="img/index_visual_burger.png" />
     </div>
     <section id="con1">
       <ul class="con1Top">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
+        <li><a href="javascript:;"></a></li>
         <li>
           <h3>FIND YOUR<br />FRIDAYS</h3>
           <div><a href="store.html">SEE OUR LOCATIONS</a></div>
         </li>
       </ul>
       <ul class="con1Bottom">
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
         <li>
           <h4>WE MAKE</h4>
           <p>steak, burger, pasta,<br />pilaf to make<br />perfect FRIDAYS</p>
           <div><a href="food.html">MENU</a></div>
         </li>
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
       </ul>
       <ul class="moCon1T_1">
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
       </ul>
       <ul class="moCon1T_2">
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
         <li>
           <h3>FIND YOUR<br />FRIDAYS</h3>
-          <div><a href="#">SEE OUR LOCATIONS</a></div>
+          <div><a href="javascript:;">SEE OUR LOCATIONS</a></div>
         </li>
       </ul>
       <ul class="moCon1T_3">
         <li>
           <h4>WE MAKE</h4>
           <p>steak, burger, pasta,<br />pilaf to make<br />perfect FRIDAYS</p>
-          <div><a href="#">MENU</a></div>
+          <div><a href="javascript:;">MENU</a></div>
         </li>
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
       </ul>
       <ul class="moCon1T_4">
-        <li><a href="#"></a></li>
+        <li><a href="javascript:;"></a></li>
       </ul>
     </section>
     <section id="con2">
@@ -142,20 +142,20 @@
       <div class="footer">
         <ul class="sns">
           <li>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="javascript:;"><i class="fa-brands fa-instagram"></i></a>
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="#">CAREERS</a></li>
-          <li><a href="#">GIFT CARDS</a></li>
-          <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">PRIVACY POLICY</a></li>
-          <li><a href="#">EMAIL SIGNUP</a></li>
+          <li><a href="javascript:;">CAREERS</a></li>
+          <li><a href="javascript:;">GIFT CARDS</a></li>
+          <li><a href="javascript:;">ACCESSIBILITY STATEMENT</a></li>
+          <li><a href="javascript:;">PRESS</a></li>
+          <li><a href="javascript:;">CONTACT</a></li>
+          <li><a href="javascript:;">PRIVACY POLICY</a></li>
+          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
         </ul>
       </div>
     </footer>
