--- a/event.html
+++ b/event.html
@@ -21,6 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/event.js"></script>
   </head>
   <body>
     <header>
@@ -45,7 +46,7 @@
     </section>
     <section id="con1">
       <div class="event1">
-        <div class="txtRight">
+        <div class="txtLeft txtLeft1">
           <h3>시그니처<br />스테이크&립 세트</h3>
           <p>
             TGI FRIDAYS의<br />시그니처 스테이크&립 세트가<br />최대 33%
@@ -55,7 +56,7 @@
         </div>
       </div>
       <div class="event2">
-        <div class="txtLeft">
+        <div class="txtRight txtRight1">
           <h3>조니 하이볼 출시</h3>
           <p>
             TGI FRIDAYS 스타일의<br />조니하이볼이<br />새롭게 출시되었습니다
@@ -64,7 +65,7 @@
         </div>
       </div>
       <div class="event3">
-        <div class="txtRight">
+        <div class="txtLeft txtLeft2">
           <h3>스페셜 런치 메뉴</h3>
           <p>
             런치 메뉴 주문 시<br />[식전브레드+탄산 음료]가<br />무료로
@@ -74,7 +75,7 @@
         </div>
       </div>
       <div class="event4">
-        <div class="txtLeft">
+        <div class="txtRight txtRight2">
           <h3>프라잇데이</h3>
           <p>
             매달 두 번째, 마지막 금요일<br />파격적인 혜택으로<br />불금을
