--- a/store.html
+++ b/store.html
@@ -44,10 +44,11 @@
     <section id="visual">
       <h2>Store</h2>
     </section>
+    <section id="con1"></section>
     <section id="popup">
       <img class="stripe1" src="img/stripe.jpg" />
       <ul>
-        <li><button>X</button><br /><img src="img/store_1.jpg" /></li>
+        <li><img src="img/store_1.jpg" /></li>
         <li>
           <ul class="info">
             <li>
@@ -74,6 +75,7 @@
               가능 / 롯데백화점 주차장 이용<br />
             </li>
           </ul>
+          <button>X</button>
         </li>
       </ul>
       <img class="stripe2" src="img/stripe.jpg" />
@@ -142,7 +144,7 @@
       </ul>
     </section>
     <ul class="page">
-      <li class="on"><a href="#">1</a></li>
+      <li class="on"><a href="javascript:;">1</a></li>
       <li><a href="javascript:;">2</a></li>
       <li><a href="javascript:;">3</a></li>
       <li><a href="javascript:;">4</a></li>
